<resources>
    <string name="app_name">LunchBox</string>
    <string name="action_settings">Preferencias</string>
    <string name="action_help">Ayuda</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="imgdescrip">Fresas</string>
    <string name="username">My name</string>
    <string name="email">micorreo@g.com</string>
    <string name="infotitle">About me:</string>
    <string name="info">My interests..</string>
    <string name="recipebook">Saved Recipes</string>
    <string name="myrecipes">My Recipebook</string>

    <string name="nav_header_title">LunchBox</string>
    <string name="nav_header_subtitle">WAG Developing</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>
