<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Backgrounds"
    tools:context=".FragPerfil">

    <!-- TODO: Update blank fragment layout -->


    <TextView
        android:id="@+id/txtUserinfo"
        android:layout_width="wrap_content"
        android:layout_height="231dp"
        android:layout_above="@+id/btn_recipebook"
        android:layout_below="@+id/txtUsertitle"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="85dp"
        android:minLines="@android:integer/config_longAnimTime"
        android:text="@string/info"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtUsermail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtUsername"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="30dp"
        android:layout_toEndOf="@+id/imgUserpic"
        android:text="@string/email"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_recipebook"
        android:layout_width="241dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="86dp"
        android:layout_marginEnd="83dp"
        android:layout_marginBottom="88dp"
        android:background="@color/Buttons"
        android:text="@string/recetario"
        android:textColor="@drawable/button_text_color" />

    <TextView
        android:id="@+id/txtUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="30dp"
        android:layout_toEndOf="@+id/imgUserpic"
        android:text="@string/username"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/imgUserpic"
        android:layout_width="151dp"
        android:layout_height="113dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="21dp"
        android:contentDescription="@string/imgdescrip"
        android:src="@drawable/fresas" />

    <TextView
        android:id="@+id/txtUsertitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgUserpic"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="30dp"
        android:text="@string/infotitle"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>